# Real-time-RAG-Application-with-Apache-Kafka

./: .env.example  .flake8  .gitignore  APIs_Streaming_Publiques_RAG_Project (1).docx  Dockerfile  Makefile  PROJECT_PLAN_15_DAYS.md  README.md  check_chroma.py  docker-compose.yml  generator-archi.py  main-overleaf.tex  main.py  pyproject.toml  requirements.txt  technical_overview.tex  test_dist.py
.github/workflows/: ci_cd.yml
chroma_db/: chroma.sqlite3
dashboard/: app.py
src/api/: main.py
src/embedding/: consumer.py  embedder.py  vector_store.py
src/ingestion/: config.py  eonet_producer.py  gdacs_producer.py  gdelt_producer.py  main.py  nasa_firms_producer.py  newsapi_producer.py  nws_producer.py  owm_producer.py  producer.py  reliefweb_producer.py  trends_producer.py  usgs_producer.py
src/processing/: deduplicator.py  main.py  normalizer.py
src/rag/: builder.py  generator.py  news_enricher.py  on_demand_fetcher.py  retriever.py
tests/: check_hawaii.py  debug_ts.py  test_dist.py
